--- a/src/RidingAnywhere-client/css/RiderBoard.css
+++ b/src/RidingAnywhere-client/css/RiderBoard.css
@@ -50,7 +50,7 @@
 
 /* 검색어 입력 창 */
 .RB_FilterTop>.boardTextBox{
-    width: 350px;
+    flex-grow: 1;
     height: 50px;
     border-radius: 10px;
     font-size: 20px;
@@ -238,7 +238,7 @@
 
 }
 
-@media(max-width:1200px){
+@media(max-width:1050px){
     .RB_FilterTop>h1{
         display: none;
     }
