2024, 11. 04 🛠️ 라이더 보드 페이지 CSS 작업 🚧

--- a/src/RidingAnywhere-client/css/RiderBoard.css
+++ b/src/RidingAnywhere-client/css/RiderBoard.css
@@ -259,6 +259,11 @@
 }
 
 @media(max-width:1050px){
+
+    .RB_FilterLine>.RB_FilterTop{
+        justify-content: center;
+    }
+
     .RB_FilterTop>h1{
         display: none;
     }
