2024, 11. 04 🛠️ 라이더 보드 페이지 CSS 작업 🚧

--- a/src/RidingAnywhere-client/css/RiderBoard.css
+++ b/src/RidingAnywhere-client/css/RiderBoard.css
@@ -5,11 +5,10 @@
     max-width: 1100px;
     min-width: 440px;
     height: 600px;
-    border: 2px solid orange;
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: black;
 }
 
 .RiderBoard>.RB_TopLine{
@@ -108,7 +107,11 @@
     cursor: pointer;
 }
 
-.RB_FilterBottom>.filterCheckBox:hover, .RB_FilterBottom>.filterInput:checked+label{
+.RB_FilterBottom>.filterCheckBox:hover{
+    box-shadow: inset 2px 2px 10px gray, inset -2px -2px 10px gray;
+}
+
+.RB_FilterBottom>.filterInput:checked+label{
     border: 2px gold solid;
     span{
         background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
@@ -170,91 +173,89 @@
     }
 }
 
-.RiderBoard{
+/* 라이더 보드 목록 영역 */
+.RiderBoard>.boardList{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 420px;
+    border: 2px solid gold;
+    box-sizing: border-box;
+    overflow: hidden;
+    border-radius: 10px;
+}
 
-    /* 라이더 보드 목록 영역 */
 
-    .boardList{
+/* 라이더 보드 목록 헤더 */
+.boardList>.boardListHeader{
+    width: 100%;
+    height: 60px;
+    min-height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    border-bottom: 2px solid gold;
+    box-sizing: border-box;
+
+    /* 텍스트 배치 */
+    h2{
         display: flex;
-        flex-direction: column;
-        width: 80%;
-        height: 420px;
-        margin-top: 20px;
-        box-sizing: border-box;
-        border: 2px solid gold;
-        overflow: hidden;
-        border-radius: 20px;
-
-        /* 텍스트 배치 */
-        h2{
-            display: flex;
-            height: 100%;
-            margin:0;
-            justify-content: center;
-            align-items: center;
-        }
-
-        /* 라이더 보드 각 칼럼 사이즈 */
-        .boardNo{
-            width: 80px;
-        }
-        .boardType{
-            width: 120px;
-        }
-        .boardTitle{
-            width: 380px;
-        }
-        .boardWriter{
-            width: 180px;
-        }
-        .boardLevel{
-            width: 100px;
-        }
-        .boardCount{
-            width: 100px;
-        }
-
-        /* 라이더 보드 목록 헤더 */
-        .boardListHeader{
-            width: 100%;
-            height: 60px;
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
-            gap: 10px;
-            box-sizing: border-box;
-            border-bottom: 2px solid gold;
-        }
-        .boardListBody{
-            width: 100%;
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding-top: 5px;
-            box-sizing: border-box;
-            background-color: rgb(17, 17, 17);
-            div{
-                width: 100%;
-                .RiderBoardBox{
-                    height: 40px;
-                    display: flex;
-                    justify-content: space-around;
-                    align-items: center;
-                    cursor: pointer;
-                }
-                .RiderBoardBox:hover{
-                    background-color: black;
-                }
-            }
-            overflow-y: scroll;
-            scrollbar-width: none;
-            
-        }
-
-
+        height: 100%;
+        margin:0;
+        justify-content: center;
+        align-items: center;
     }
+}
 
+.boardList>.boardListBody{
+    width: 100%;
+    height: 360px;
+    min-height: 360px;
+    max-height: 360px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0;
+    gap: 10px;
+    box-sizing: border-box;
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
+
+.boardListBody>div{
+    width: 100%;
+    .RiderBoardBox{
+        height: 40px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        cursor: pointer;
+    }
+    .RiderBoardBox:hover{
+        box-shadow: inset 2px 2px 10px gray, inset -2px -2px 10px gray;
+    }
+}
+
+.boardList>.boardListHeader, .boardListBody>div>.RiderBoardBox{
+    .boardNo{
+        width: 80px;
+    }
+    .boardType{
+        width: 120px;
+    }
+    .boardTitle{
+        width: 380px;
+    }
+    .boardWriter{
+        width: 180px;
+    }
+    .boardLevel{
+        width: 100px;
+    }
+    .boardCount{
+        width: 100px;
+    }
 }
 
 @media(max-width:1050px){
