--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: black;
     gap: 10px;
 }
 
@@ -99,12 +100,6 @@
                 cursor: pointer;
             }
         }
-    }
-    >h1{
-        width: 100%;
-        padding: 0 10px;
-        overflow: hidden;
-        box-sizing: border-box;
     }
 }
 
