--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -47,62 +47,74 @@
     box-sizing: border-box;
     border: 2px solid orange;
     border-radius: 10px;
-    >div{
+}
+
+.BoardTitleLine>.TitleTopLine{
+    display: flex;
+    width: 100%;
+    height: 50%;
+    box-sizing: border-box;
+    gap: 10px;
+}
+
+.TitleTopLine>.BoardWriterInfo{
+    display: flex;
+    cursor: pointer;
+    width: 320px;
+    min-width: 200px;
+    max-width: 280px;
+}
+
+.TitleTopLine>.BoardInfoBox{
+    display: flex;
+    flex-direction: column;
+    width: 30vw;
+    max-width: 290px;
+    min-width: 200px;
+}
+
+.BoardInfoBox>.BoardInfoBox_Top{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    height: max-content;
+    gap: 5px;
+}
+
+.BoardInfoBox_Top>.boardControl{
+    display: flex;
+    width: max-content;
+    height: max-content;
+    align-items: center;
+    justify-content: center;
+    input{
         display: flex;
-        width: 100%;
-        height: 50%;
-        padding: 5px;
-        box-sizing: border-box;
-        #writerInfoBtn+label{
-            cursor: pointer;
-        }
-        >div{
-            position: absolute;
-            transform: translateX(-30px);
-            right: 0;
-            display: flex;
-            flex-direction: column;
-            width: 450px;
-            height: max-content;
-            justify-content: center;
-            text-wrap: nowrap;
-            overflow: hidden;
-            .RightTopBox{
-                display: flex;
-                justify-content: right;
-                box-sizing: border-box;
-            }
-            .boardControl{
-                display: flex;
-                width: max-content;
-                height: max-content;
-                align-items: center;
-                justify-content: center;
-                input{
-                    width: 40px;
-                    height: 40px;
-                    background-color: rgba(0, 0, 0, 0);
-                    background-size: 40px;
-                    border: none;
-                    cursor: pointer;
-                }
-                #boardChangeBtn{
-                    margin-left: 5px;
-                    background-image: url(../../../public/img/ChangeBtnImg.png);
-                    
-                }
-                #boardDeleteBtn{
-                    background-image: url(../../../public/img/DeleteImg.png);
-                }
-            }
-            #boardAddressBtn+label{
-                justify-content: right;
-                cursor: pointer;
-            }
-        }
+        width: 40px;
+        height: 40px;
+        background-color: rgba(0, 0, 0, 0);
+        background-size: 40px;
+        padding: 0;
+        border: none;
+        cursor: pointer;
+    }
+    #boardChangeBtn{
+        background-image: url(../../../public/img/ChangeBtnImg.png);
+        
+    }
+    #boardDeleteBtn{
+        background-image: url(../../../public/img/DeleteImg.png);
     }
 }
 
+.BoardInfoBox>.BoardAddressInfo{
+    display: none;
+    width: 100%;
+    justify-content: right;
+    overflow: hidden;
+    text-wrap: nowrap;
+    cursor: pointer;
+}
 
 .RiderBoardDetail{
     .PageTopLine{
