--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -14,10 +14,11 @@
 .RiderBoardDetail>.PageTopLine{
     display: flex;
     width: 100%;
-    height: 160px;
+    height: max-content;
     min-height: 160px;
     box-sizing: border-box;
     align-items: center;
+    justify-content: center;
     gap: 10px;
 }
 
@@ -28,6 +29,8 @@
     justify-content: center;
     width: 300px;
     min-width: 300px;
+    height: 160px;
+    min-height: 160px;
     box-sizing: border-box;
 }
 
@@ -38,7 +41,7 @@
     flex-grow: 1;
     min-width: 320px;
     max-width: 800px;
-    height: 160px;
+    height: max-content;
     min-height: 160px;
     max-height: 160px;
     gap: 10px;
@@ -61,17 +64,17 @@
     display: flex;
     cursor: pointer;
     align-items: center;
-    width: 280px;
-    min-width: 200px;
-    max-width: 280px;
+    width: max-content;
+    min-width: 300px;
+    max-width: 420px;
 }
 
 .TitleTopLine>.BoardInfoBox{
     display: flex;
     flex-direction: column;
     width: max-content;
-    max-width: 320px;
-    min-width: 250px;
+    max-width: 330px;
+    min-width: 300px;
 }
 
 .BoardInfoBox>.BoardInfoBox_Top{
@@ -119,9 +122,6 @@
 }
 
 .RiderBoardDetail{
-    .PageTopLine{
-
-    }
     .PageBodyLine{
         width: 100%;
         height: 450px;
@@ -363,5 +363,15 @@
                 cursor: pointer;
             }
         }
+    }
+}
+
+@media(max-width:1080px){
+    .PageTopLine>.PageTitle{
+        display: none;
+    }
+
+    .BoardTitleLine>.TitleTopLine{
+        flex-direction: column;
     }
 }
