--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -155,7 +155,7 @@
     width: 100%;
     height: max-content;
     min-height: 200px;
-    max-height: 400px;
+    max-height: 500px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -169,7 +169,9 @@
 
 .PageCommentLine>.commentList{
     width: 100%;
-    height: 400px;
+    height: max-content;
+    min-height: 400px;
+    max-height: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -194,6 +196,10 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scrollbar-width: none;
+    gap: 10px;
 }
 
 .RiderBoardDetail{
